chore: minor code improvements